[package]
name = "rustvox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.11.0"
glutin = "0.28"
glam = "0.19.0"
bytemuck = "1.7.2"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
png = "0.17.1"
palette = "0.2.1"
egui_glow = "0.16.0"
egui = "0.16.0"
winit = "0.26.1"